# cli-hack-sim

./: README.md  app.py  pyproject.toml
DSA/: __init__.py  searching.py  sorting.py  traversal_folder.py
DSA/linked_list/: __init__.py  circular.py  single.py
DSA/queue/: queue.py
DSA/stack/: log_aktivitas.py  stack.py
DSA/tree/: tree.py
src/: __init__.py  filehandler.py  main_menu.py  searching.py  server.py
src/data/: akun.json  bruteforce.json  server_status.json
src/data/dalam-json/: akun_dan_status_server.json  traffic.json
tests/demo/: demo_async_header_menu.py  demo_double_prompt_toolkit.py  demo_main_menu.py
utils/: menu_utils.py  rich_standard_color_list.json  text_color_changer.py
