[project]
name = "cli-hack-sim"
version = "0.1.0"
description = "Program ini merupakan simulasi sistem jaringan komputer dan aktivitas hacker berbasis console. User berperan sebagai operator jaringan atau hacker."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colorama>=0.4.6",
    "pytest>=9.0.3",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = [
    "numpy>=2.4.6",
    "pandas>=3.0.3",
]
